<resources>
    <string name="app_name">Emandi2</string>

    //Signing Activities
    <string name="action_settings">Settings</string>
    <string name="error_weak_password">weak_password</string>
    <string name="error_invalid_email">invalid email</string>
    <string name="error_user_exists">user exist</string>

    //Drawer Activities
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="units_available">Units Available</string>
    <string name="sign_up">Sign Up</string>
    <string name="location">Location</string>
    <string name="product_description">Product Description</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="add_image">Add Image</string>
    <string name="dd_mm_yy">DD / MM / YY</string>
    <string name="forgot_password">Forgot Password</string>
</resources>
