<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp">
    <TextView
        android:id="@+id/view_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/add_product"
        android:textColor="@color/white"
        android:textSize="25sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/prod_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:textSize="15sp"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/prod_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_price"
                android:textSize="15sp"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:layout_marginTop="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/prod_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_quantity"
                android:inputType="text"
                android:textSize="15sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="170dp"
            android:background="@drawable/btn_white_bg"
            android:text="@string/add_product"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>

</RelativeLayout>